# debug-show

./: DebugShow.hs  Makefile  README.md  debug-show.cabal
test/: Test.hs
