name: debug-show
version: 0
build-type: Simple
cabal-version: >= 1.8

library
  build-depends:
      base
    , pretty
  ghc-options: -Wall
  exposed-modules: DebugShow

test-suite tests
  main-is: Test.hs
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  build-depends:
      base
    , debug-show
